[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/TitleScreen/title_screen.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/norse.bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/TitleScreen/Buttons/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/TitleScreen/Buttons/ContinueButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/TitleScreen/Buttons/OptionsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://PNG/idleMan.png" type="Texture" id=6]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/DeathSounds.tscn" type="PackedScene" id=8]
[ext_resource path="res://blackbackground.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 124
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1280.0
margin_bottom = -720.0
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 33.6369
margin_right = 1160.0
margin_bottom = 709.637

[node name="Logo" type="Label" parent="Menu"]
margin_right = 1040.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.615686, 0.0235294, 0.0235294, 1 )
custom_constants/shadow_offset_y = 5
text = "GLADIATE"
align = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 128.0
margin_right = 1040.0
margin_bottom = 630.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 518.0
margin_bottom = 502.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 141.0
margin_right = 518.0
margin_bottom = 201.0
custom_colors/font_color_pressed = Color( 0.615686, 0.0235294, 0.0235294, 1 )
scene_to_load = ""

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 221.0
margin_right = 518.0
margin_bottom = 281.0
custom_colors/font_color_pressed = Color( 0.615686, 0.0235294, 0.0235294, 1 )
scene_to_load = ""

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 301.0
margin_right = 518.0
margin_bottom = 361.0
custom_colors/font_color_pressed = Color( 0.615686, 0.0235294, 0.0235294, 1 )
scene_to_load = "res://Game/Options.tscn"

[node name="Label" parent="Menu/CenterRow/Buttons/OptionsButton" index="0"]
align = 0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 502.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 8.0
margin_right = 510.0
margin_bottom = 502.0
size_flags_horizontal = 3
texture = ExtResource( 6 )

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 634.0
margin_right = 1040.0
margin_bottom = 712.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Version 0.0

"

[node name="FadeIn" parent="." instance=ExtResource( 7 )]
visible = false

[node name="AudioStreamPlayer2D" parent="." instance=ExtResource( 8 )]

[node name="ParallaxBackground" parent="." instance=ExtResource( 9 )]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]

[editable path="Menu/CenterRow/Buttons/OptionsButton"]
